name:           gitsnap
version:        0.1
synopsis:       Git Smart HTTP Server
homepage:       http://github.com/jystic/gitsnap
license:        BSD3
license-file:   LICENSE
author:         Jacob Stanley <jacob@stanley.io>
maintainer:     Jacob Stanley <jacob@stanley.io>
category:       Development
build-type:     Simple
cabal-version:  >= 1.2

Executable gitsnap
  hs-source-dirs: src
  main-is: Main.hs
  
  build-depends:       
      base        >= 4
    , bytestring  == 0.9.*
    , directory   == 1.1.*
    , filepath    == 1.1.*
    , monads-fd   == 0.1.*
    , old-locale  == 1.0.*
    , process     == 1.0.*
    , snap-core   == 0.4.*
    , snap-server == 0.4.*
    , text        == 0.11.*
    , time        == 1.1.*
    , MonadCatchIO-transformers == 0.2.*
    , xhtml-combinators         == 0.2.*
  
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
